# ephemdir

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRACT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  MIGRATION.md  NOTICE  README.md  SECURITY.md  pyproject.toml  requirements-build.txt  requirements-dev.txt
.github/workflows/: ci.yml  publish.yml
packaging/: com.vindfjur.ephemdir.sweep.plist
src/ephemdir/: __init__.py  __main__.py  _completion.py  _config.py  _display.py  _doctor.py  _inuse.py  _menu.py  _mounts.py  _naming.py  _platform.py  _policy.py  _registry.py  _security.py  _service.py  _size.py  _stats.py  _trusted_exec.py  cli.py  core.py
src/ephemdir/_backends/: __init__.py  base.py  posix.py  windows.py  windows_api.py
tests/: conftest.py  test_auxiliary_modules.py  test_cli.py  test_config.py  test_core.py  test_current_target.py  test_display.py  test_doctor.py  test_hardening.py  test_hardening_coverage.py  test_inuse.py  test_lsof.py  test_manage.py  test_migration.py  test_naming.py  test_platform_safety.py  test_recovery_safety.py  test_registry.py  test_service.py  test_stats.py  test_tags.py
