[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ephemdir"
version = "0.2.0"
description = "Create self-cleaning ephemeral directories that vanish after a lifetime or on restart."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "vindfjur" }]
keywords = ["temporary", "directory", "tempdir", "ephemeral", "cleanup", "tmp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Filesystems",
    "Typing :: Typed",
]
dependencies = [
    "coolname>=2.0",
    "tomli>=1.1.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "build>=1",
    "twine>=5",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/vindfjur/ephemdir"
Repository = "https://github.com/vindfjur/ephemdir"
Issues = "https://github.com/vindfjur/ephemdir/issues"
Changelog = "https://github.com/vindfjur/ephemdir/blob/main/CHANGELOG.md"

[project.scripts]
ephemdir = "ephemdir.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ephemdir = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py38"
src = ["src", "tests"]

[tool.ruff.lint]
# pyflakes, pycodestyle, isort, pyupgrade, bugbear, comprehensions.
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.mypy]
# Analysis target; runtime still supports 3.8 via `from __future__ import annotations`.
python_version = "3.10"
packages = ["ephemdir"]
strict = true
# Tests favour readability over exhaustive typing.
exclude = ["tests/"]

[[tool.mypy.overrides]]
# Third-party deps without bundled type information.
module = ["coolname", "tomli", "tomllib"]
ignore_missing_imports = true
